# teste_de_repositorio_a

./: docker-compose.yml
.github/workflows/: sync-lovable.yml
backend/: Cargo.toml
backend/src/: main.rs
